Updated link to project guide

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -11,7 +11,7 @@ body {
 </head>
 
 <body>
-<a href="http://www.google.com" target="_blank">Project template guide</a><br />
+<a href="https://docs.google.com/a/mesmo.tv/document/d/1tyWC1mRKtPh4BEXEzzxAj7qm1Heb3UMejv5poKGgkME/" target="_blank">Project template guide</a><br />
 <a href="http://mesmotv.gamedev.s3-website-us-west-1.amazonaws.com/docs/index.html" target="_blank">GF2 ASDocs</a><br />
 <a href="http://www.google.com" target="_blank">Project template download</a><br />
 </body>
